--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ section{
     flex-direction: row;
     align-items: center;
     gap: 5vh;
-    padding: 20%;
+    padding: 4%;
 }
 
 .title {
@@ -82,6 +82,7 @@ section{
 
 .description {
     width: 100%;
+    padding: 10%
 }
 
 .project-cards {
