--- a/css/style.css
+++ b/css/style.css
@@ -82,14 +82,17 @@ section{
 
 .description {
     width: 100%;
-    padding: 10%
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 10px;
 }
 
 .project-cards {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     column-gap: 20px;
-    row-gap: 2em;
+    row-gap: 40px;
 }
 
 .project-card {
