--- a/reading/css/style.css
+++ b/reading/css/style.css
@@ -33,7 +33,7 @@ p {
     border-radius: 8px;
     box-shadow: 0 4px 8px skyblue;
     text-align: center;
-    padding: 8px;
+    padding: 3%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -51,4 +51,5 @@ p {
     justify-content: space-between;
     gap: 10px;
     padding: 4%;
+    font-weight: 700;
 }
